Bunch of changes 1) Move SM to Service/SM 2) Change autoload.php to WindowsAzure.php 3) Remove require_once on XML_Serializer lib.
Signed-off-by: Abdelrahman Elogeel <Abdelrahman.Elogeel@microsoft.com>

--- a/build.xml
+++ b/build.xml
@@ -43,7 +43,7 @@
  <target name="phpab" description="Generate autoloader scripts">
   <exec executable="phpab.bat">
    <arg value="--output" />
-   <arg path="${basedir}/src/autoload.php" />
+   <arg path="${basedir}/src/WindowsAzure.php" />
    <arg value="--template" />
    <arg path="${basedir}/build/src_autoload.php.in" />
    <arg value="--indent" />
@@ -53,7 +53,7 @@
 
   <exec executable="phpab.bat">
    <arg value="--output" />
-   <arg path="${basedir}/tests/autoload.php" />
+   <arg path="${basedir}/tests/WindowsAzureTests.php" />
    <arg value="--template" />
    <arg path="${basedir}/build/tests_autoload.php.in" />
    <arg value="--indent" />
