--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "license": "Apache 2.0",
     "authors": [
         {
-            "name": "Abdelrahman Elogeel",
-            "email": "Abdelrahman.Elogeel@microsoft.com",
+            "name": "Azure PHP SDK",
+            "email": "azurephpsdk@microsoft.com",
             "homepage": "https://www.windowsazure.com/fr-fr/develop/php/"
         }
     ],
