--- a/composer.json
+++ b/composer.json
@@ -10,20 +10,20 @@
         }
     ],
     "require": {
-        "pear-pear/HTTP_Request2":   "*",
-        "pear-pear/Mail_Mime":       "*",
-        "pear-pear/Mail_mimeDecode": "*"
+        "pear-pear.php.net/HTTP_Request2":   "*",
+        "pear-pear.php.net/Mail_Mime":       "*",
+        "pear-pear.php.net/Mail_mimeDecode": "*"
     },
-    
+
     "repositories": [
         {
             "type": "pear",
             "url": "http://pear.php.net"
         }
     ],
-    
+
     "autoload": {
         "psr-0": { "WindowsAzure\\": "" }
     }
-    
+
 }
