--- a/composer.json
+++ b/composer.json
@@ -9,21 +9,22 @@
             "email": "azurephpsdk@microsoft.com"
         }
     ],
+
     "require": {
-        "pear-pear2.php.net/HTTP_Request2":   "*",
-        "pear-pear2.php.net/Mail_Mime":       "*",
-        "pear-pear2.php.net/Mail_mimeDecode": "*"
+        "pear-pear.php.net/HTTP_Request2":   "*",
+        "pear-pear.php.net/Mail_Mime":       "*",
+        "pear-pear.php.net/Mail_mimeDecode": "*"
     },
-    
+
     "repositories": [
         {
             "type": "pear",
             "url": "http://pear.php.net"
         }
     ],
-    
+
     "autoload": {
         "psr-0": { "WindowsAzure\\": "" }
     }
-    
+
 }
