--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,10 @@
         }
     ],
     "require": {
-        "pear-pear2.php.net/HTTP_Request2":   "*",
-        "pear-pear2.php.net/Mail_Mime":       "*",
-        "pear-pear2.php.net/Mail_mimeDecode": "*"
+        "pear/http_request2":   "dev-master",
+        "pear/mail_mime":       "dev-master",
+        "pear/mail_mime-decode": "dev-master"
     },
-    
-    "repositories": [
-        {
-            "type": "pear",
-            "url": "http://pear.php.net"
-        }
-    ],
     
     "autoload": {
         "psr-0": { "WindowsAzure\\": "" }
