--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,28 @@
 {
-    "name": "microsoft/windowsazure",
-    "description": "This project provides a set of PHP client libraries that make it easy to access Windows Azure tables, blobs, queues, service runtime and service management APIs.",
-    "keywords": [ "php", "azure", "sdk" ],
-    "license": "Apache-2.0",
-    "authors": [
-        {
-            "name": "Azure PHP SDK",
-            "email": "azurephpsdk@microsoft.com"
-        }
-    ],
-    "require": {
-        "pear-pear2.php.net/HTTP_Request2":   "*",
-        "pear-pear2.php.net/Mail_Mime":       "*",
-        "pear-pear2.php.net/Mail_mimeDecode": "*"
-    },
-    
-    "repositories": [
-        {
-            "type": "pear",
-            "url": "http://pear.php.net"
-        }
-    ],
-    
-    "autoload": {
-        "psr-0": { "WindowsAzure\\": "" }
+  "name": "microsoft/windowsazure",
+  "description": "This project provides a set of PHP client libraries that make it easy to access Windows Azure tables, blobs, queues, service runtime and service management APIs.",
+  "keywords": [ "php", "azure", "sdk" ],
+  "license": "Apache-2.0",
+  "authors": [
+    {
+      "name": "Azure PHP SDK",
+      "email": "azurephpsdk@microsoft.com"
     }
-    
+  ],
+  "require": {
+    "pear-pear.php.net/HTTP_Request2": "*",
+    "pear-pear.php.net/Mail_Mime": "*",
+    "pear-pear.php.net/Mail_mimeDecode": "*",
+    "firebase/php-jwt": "^3.0"
+  },
+  "repositories": [
+    {
+      "type": "pear",
+      "url": "http://pear.php.net"
+    }
+  ],
+  "autoload": {
+    "psr-0": { "WindowsAzure\\": "" }
+  }
+
 }
