--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
     "pear-pear.php.net/Mail_mimeDecode": "*",
     "firebase/php-jwt": "^3.0"
   },
+  "require-dev": {
+    "mikey179/vfsStream": "^1.6"
+  },
   "repositories": [
     {
       "type": "pear",
