This probably won't work

--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
     },
     "autoload": {
         "psr-0": { "WindowsAzure\\": "" }
-    }
+    },
+	"include-path": [
+		"../pear/http_request2"
+	]
 }
