Add `extra.branch-alias` setting to `composer.json`
| Q             | A
| ------------- | ---
| Bug fix?      | no
| New feature?  | no
| BC breaks?    | no
| Deprecations? | no
| Tests pass?   | yes
| Fixed tickets |
| License       | MIT
| Doc PR        |

Add `extra.branch-alias` setting to `composer.json` in order to allow install
development versions while respecting [semver](http://semver.org/).
This obviously can be updated taking into account the current branching/release
strategy, maybe the branch alias should be pointing to `0.5-dev` instead of
`0.4-dev`.
This change allows to use constraints like `"microsoft/windowsazure": "^0.4@dev",
which will actually install the `dev-master` version.

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,12 @@
     "autoload": {
         "psr-0": { "WindowsAzure\\": "" }
     },
-	"include-path": [
-		"../../pear/http_request2"
-	]
+    "include-path": [
+        "../../pear/http_request2"
+    ],
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.4-dev"
+        }
+    }
 }
