--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "firebase/php-jwt": "^3.0"
     },
     "require-dev": {
-        "mikey179/vfsStream": "^1.6"
+        "mikey179/vfsStream": "^1.6",
+        "phpunit/phpunit": "^4.7"
     },
     "autoload": {
         "psr-0": { "WindowsAzure\\": "" }
