--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,6 @@
         "firebase/php-jwt": "^3.0"
     },
     "require-dev": {
-        "phing/phing": "2.*",
         "mikey179/vfsStream": "^1.6",
         "phpunit/phpunit": "^4.7"
     },
@@ -26,7 +25,7 @@
         "psr-0": { "WindowsAzure\\": "" }
     },
     "include-path": [
-        "../../pear/http_request2"
+        "./vendor/pear/http_request2"
     ],
     "extra": {
         "branch-alias": {
