Use composer's dev autoload for tests
| Q             | A
| ------------- | ---
| Branch        | master
| Bug fix?      | no
| New feature?  | yes
| BC breaks?    | no
| Deprecations? | yes
| Tests pass?   | yes
| Fixed tickets |
| License       | MIT
| Doc PR        |

* Use composer's `autoload-dev` for `tests` dir.
* Narrowed the main autoload to `WindowsAzure` dir.

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,10 @@
         "phpunit/phpunit": "^4.7"
     },
     "autoload": {
-        "psr-0": { "WindowsAzure\\": "" }
+        "psr-4": { "WindowsAzure\\": "WindowsAzure/" }
+    },
+    "autoload-dev": {
+        "psr-4": { "Tests\\": "tests/" }
     },
     "extra": {
         "branch-alias": {
