--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,14 @@
     },
     "require-dev": {
         "mikey179/vfsStream": "^1.6",
-        "phpunit/phpunit": "^4.7",
+        "phpunit/phpunit": "^4.8",
+        "phpdocumentor/phpdocumentor": "^2.8",
+        "sebastian/phpcpd": "^2.0",
+        "phploc/phploc": "^2.1",
+        "pdepend/pdepend": "^2.2",
+        "phpmd/phpmd": "^2.4",
+        "squizlabs/php_codesniffer": "^2.6",
+        "mayflower/php-codebrowser": "^1.1",
         "fabpot/php-cs-fixer": "^1.11"
     },
     "autoload": {
