--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     },
     "require-dev": {
         "mikey179/vfsStream": "^1.6",
-        "phpunit/phpunit": "^4.7"
+        "phpunit/phpunit": "^4.7",
+        "fabpot/php-cs-fixer": "^1.11"
     },
     "autoload": {
         "psr-4": { "WindowsAzure\\": "WindowsAzure/" }
