--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,16 +12,16 @@
   </testsuites>
 
   <logging>
-    <log type="coverage-html" target="build/coverage" title="azure-sdk-for-php"
+    <log type="coverage-html" target="bin/coverage" title="azure-sdk-for-php"
          charset="UTF-8" yui="true" highlight="true"
          lowUpperBound="35" highLowerBound="70"/>
-    <log type="coverage-clover" target="build/logs/clover.xml"/>
-    <log type="junit" target="build/logs/unit.xml" logIncompleteSkipped="false"/>
+    <log type="coverage-clover" target="bin/logs/clover.xml"/>
+    <log type="junit" target="bin/logs/unit.xml" logIncompleteSkipped="false"/>
   </logging>
 
   <filter>
     <whitelist addUncoveredFilesFromWhitelist="true">
-      <directory suffix=".php">WindowsAzure</directory>
+      <directory suffix=".php">src</directory>
       <exclude>
         <file>src/WindowsAzure.php</file>
       </exclude>
