--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "pear/net_url2": "^2.2",
         "pear/mail_mime": "^1.10",
         "pear/mail_mime-decode": "^1.5",
-        "firebase/php-jwt": "^3.0",
+        "firebase/php-jwt": "^4.0",
         "microsoft/azure-storage": "^0.10"
     },
     "require-dev": {
@@ -28,7 +28,7 @@
         "phpmd/phpmd": "^2.4",
         "squizlabs/php_codesniffer": "^2.6",
         "mayflower/php-codebrowser": "^1.1",
-        "fabpot/php-cs-fixer": "^1.11"
+        "friendsofphp/php-cs-fixer": "^1.11"
     },
     "autoload": {
         "psr-4": { "WindowsAzure\\": "src/" }
