--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ matrix:
 before_script:
   - composer install --prefer-dist -o
 
-script: ./vendor/bin/phpunit tests/ -c phpunit.xml.dist
+script: ./vendor/bin/phpunit tests/ -c phpunit.local.xml.dist
