--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,9 @@ env:
 
 matrix:
     include:
-        - php: 5.4
         - php: 5.5
         - php: 5.6
-        - php: 7
-        - php: hhvm
+        - php: hhvm-3.9
     fast_finish: true
 
 before_script:
