--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "pear/mail_mime": "^1.10",
         "pear/mail_mime-decode": "^1.5",
         "firebase/php-jwt": "^4.0",
-        "microsoft/azure-storage": "^0.10"
+        "microsoft/azure-storage": "^0.10",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "mikey179/vfsStream": "^1.6",
