--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
 language: php
 
+php:
+    - '5.6'
+
 sudo: false
 
 env:
   - AZURE_STORAGE_CONNECTION_STRING="UseDevelopmentStorage=true;"
-
-matrix:
-    include:
-        - php: 5.6
-    fast_finish: true
 
 before_script:
   - composer install --prefer-dist -o
