Removing the HTTP_Request2 package. (#894)
* Guzzle.

* GuzzleHttp\Client.

* Minor improvements in HttpClient.

* Psr7\Request

* Switch to PHP 5.6.

* Lock update

* Update Travic-CI.

* Changelog

* Clean code.

* Comment old request.

* PostParams

* Remove Proxy Settings.

* Documentation fix.

* 'verify' = false.

* Update 'verify' option.

* Documentaiton fix for proxy settings

* HTTP responce: set body

* Handle Guzzle Exceptions.

* Update $response variable.

* Return response headers.

* Certificate.

* Assert

* Don't allow redirect.

* $config = $this->_config

* Local client.

* $this->_method

* default method is "GET".

* Headers.

* config

* body

* No need for content-length

* request options

* \HTTP_Request2_Response is replaced by \Psr\Http\Message\ResponseInterface

* Merge fix.

* ResponseInterface

* IServiceFilter with ResponseInterface parameters.

* Minor changes.

* SimpleFilterMock is fixed.

* HTTP response can't be null.

* Remove old _request variable.

* minor update

* minor changes in ServiceRestProxy.

* minor

* minor.

* minor

* BatchResponses with Psr7 Responses.

* Merge conflicts are solved.

* getContexts() => getResponses().

* Fix for coverage

* Response header fix.

* Bug fix.

* response body bug fix.

* PHP 5 and PHPDOC type hints.

* PHP 5 and PHPDOC type hints.

* setDate() accept string

* PHP 5 and PHPDOC type hints in tests

* Accept null

* PHP 5 and PHPDOC type hints in tests

--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
     ],
     "require": {
         "php": ">=5.6",
-        "pear/http_request2": "^2.3",
         "pear/net_url2": "^2.2",
         "pear/mail_mime": "^1.10",
         "pear/mail_mime-decode": "^1.5",
         "firebase/php-jwt": "^4.0",
-        "microsoft/azure-storage": "^0.10"
+        "microsoft/azure-storage": "^0.10",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "mikey179/vfsStream": "^1.6",
