--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "pear/mail_mime-decode": "^1.5",
         "firebase/php-jwt": "^4.0",
         "microsoft/azure-storage": "^0.10",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "^6.2",
+        "zendframework/zend-mime": "^2.6"
     },
     "require-dev": {
         "mikey179/vfsStream": "^1.6",
