--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "pdepend/pdepend": "^2.2",
         "phpmd/phpmd": "^2.4",
         "squizlabs/php_codesniffer": "^2.6",
-        "mayflower/php-codebrowser": "^1.1"
+        "mayflower/php-codebrowser": "^1.1",
+        "friendsofphp/php-cs-fixer": "^1.12.2"
     },
     "autoload": {
         "psr-4": { "WindowsAzure\\": "src/" }
