Use Zend-Mime instead of PEAR package. PHP 7. (#900)
* Using Auzre Store SDK for parsing mime types.

* Test.

* Fix PHPCS errors.

* Fix PHPCS errors.

* Fix PHPCS

* Using Zend/Mime to parse mime.

* HHVM

* update php-cs-fixer

* Update composer.lock.

* Remove php-cs-fixer

* Revert "Remove php-cs-fixer"

This reverts commit 0446375e1d4bc126c691e6d1389a165dd9fd014b.

* Remove HHVM

* A link to package.

* Chanegelog.

* Minor fix.

* Remove pear/mail_mime-decode

* Remove unused 'use'.

* Examples.

--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,11 @@
         "php": ">=5.6",
         "pear/net_url2": "^2.2",
         "pear/mail_mime": "^1.10",
-        "pear/mail_mime-decode": "^1.5",
         "firebase/php-jwt": "^4.0",
         "microsoft/azure-storage": "^0.10",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "^6.2",
+        "zendframework/zend-mime": "^2.6",
+        "zendframework/zend-mail": "^2.7"
     },
     "require-dev": {
         "mikey179/vfsStream": "^1.6",
@@ -28,7 +29,7 @@
         "phpmd/phpmd": "^2.4",
         "squizlabs/php_codesniffer": "^2.6",
         "mayflower/php-codebrowser": "^1.1",
-        "friendsofphp/php-cs-fixer": "^1.11"
+        "friendsofphp/php-cs-fixer": "^1.12.2"
     },
     "autoload": {
         "psr-4": { "WindowsAzure\\": "src/" }
