Schema Object parsing

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
     "autoload": {
         "psr-4": { "": [ "src/", "gen/" ] }
     },
+    "autoload-dev": {
+        "psr-4": { "": "test" }
+    },
     "require": {
         "php": ">=5.6"
     },
