--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "psr-4": { "": "test" }
     },
     "require": {
-        "php": ">=5.6"
+        "php": ">=5.6",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
