--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": ">=5.6",
         "pear/net_url2": "^2.2",
         "pear/mail_mime": "^1.10",
-        "firebase/php-jwt": "^4.0",
+        "firebase/php-jwt": "^4.0 || ^5.0",
         "microsoft/azure-storage": "^0.19.1",
         "guzzlehttp/guzzle": "^6.2",
         "zendframework/zend-mime": "^2.6",
